# devdrivr

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bun.lockb  developer_cockpit_prd.md  package.json  tsconfig.json  turbo.json
.github/workflows/: backend.yml  cockpit-ci.yml  tauri.yml
.husky/: pre-commit  pre-push
apps/cockpit/: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  UI_IMPROVEMENT_REPORT.md  eslint.config.js  final_prod.key  final_prod.key.pub  index.html  latest.json  new_key  new_key.pub  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/cockpit/documentation/: API_COMPONENTS.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  ERROR_HANDLING.md  MCP_SERVER.md  ONBOARDING.md  PERFORMANCE.md  PRODUCT_MAP.md  QUICK_START.md  README.md  STYLE_GUIDE.md  TESTING.md  USER_GUIDE.md
apps/cockpit/samples/: README.md  js-snippets.md  thingworx-api-collection.md  thingworx-snippets.md
apps/cockpit/scripts/: bump-version.mjs  ci-debug.sh  ci-setup.sh  extract-keys.mjs  finalize-updater.mjs  (+2 more)
apps/cockpit/src-tauri/: Cargo.toml  tauri.conf.json
apps/cockpit/src-tauri/capabilities/: default.json
apps/cockpit/src-tauri/icons/: icon.icns
apps/cockpit/src-tauri/migrations/: 001_initial.sql  002_api_client.sql  003_notes_tags.sql  004_history_metadata.sql  005_snippets_folder.sql  006_prompt_templates.sql  007_prompt_template_authors.sql  008_notes_sort_order.sql
apps/cockpit/src-tauri/src/: lib.rs
apps/cockpit/src-tauri/src/mcp/: mod.rs  service.rs  types.rs
apps/docs/: package.json
apps/next/: package.json
apps/tauri/: package.json
docs/cockpit/: ARCHITECTURE.md
(+316 files in other folders)
