[package]
name = "cockpit"
version = "0.1.0"
description = "devdrivr cockpit — developer utility workspace"
authors = ["devdrivr"]
edition = "2021"

[lib]
name = "cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
